--- a/ecommerce-ant/package.json
+++ b/ecommerce-ant/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/postcss": "^4.1.12",
     "antd": "^5.27.1",
     "axios": "^1.11.0",
     "jsonwebtoken": "^9.0.2",
